--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "tsc --noEmit"
   },
   "dependencies": {
     "@google/genai": "^1.20.0",
-    "react-dom": "^19.1.1",
+    "@types/jspdf": "^1.3.3",
+    "firebase": "^12.3.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^4.2.0",
     "react": "^19.1.1",
-    "firebase": "^12.3.0"
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
